[package]
name = "collapse"
version = "0.1.0"
authors = ["wareya <wareya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["png"] }
oorandom = "11.1.3"

